All erased. pom.xml completely rewritten.